# klippers

./: .gitignore  Makefile  docker-compose-prod.yaml  docker-compose.yaml
backend/: .env.docker  .gitignore  Dockerfile  Dockerfile.dockerhub  Dockerfile.prod  Makefile  crontab.example  pdf-sign-pfx.sh  place_signature_on_pdf.sh  psql.sh  psql_prod.sh  psql_sandbox.sh  pyproject.toml  run_server.sh  user_videos_polling.sh
backend/app/: config.py  main.py
backend/app/actors/: actor_chat.py
backend/app/api/: middleware.py
backend/app/dao/: document_dao.py
backend/app/db/: database.py  model_document.py  seed.py
backend/app/db_polling/: pdf_signing.py  user_videos_polling.py
backend/app/init/: dbmanager.py
backend/app/klipperscmd/: .gitignore  Makefile  clipper.py  debug_ass_file.py  example_ass_workflow.sh  print_time_seconds.sh  pyproject.toml.ori  run.sh  run_for_one_video.sh  run_on_uploaded_video.sh  run_on_uploaded_video_fast.sh  test_crop_and_stack.py  test_fixed_karaoke.ass  test_karaoke.ass
backend/app/schemas/: schema_chat.py  schema_document.py  schema_user.py
backend/app/service/: pdf_pfx_sign.py  pdf_pfx_sign.sh  pdf_pfx_sign_cmd.py  pdf_service.py  (+2 more)
backend/e2e_test/: create_document.sh
backend/patches/: target_files.txt
backend/prompts/: create_fastapi_project.md  create_login_api.md  write_test_cases.md
backend/scripts/: backup_postgres.sh  pdf_pfx_sign2.sh  pfx.sh  restore_postgres.sh
backend/tests/: conftest.py  test_api_documents.py  test_dao_document.py  test_db_signing_lifecycle.py  test_pdf_service.py  test_text_to_image.py
(+192 files in other folders)
